添削されたところを直してみました

--- a/index.html
+++ b/index.html
@@ -18,51 +18,59 @@
 </header>
 <main>
    <section>
-    <h1>XeoryExtension</h1>
+    <h2>XeoryExtension</h2>
     <p>Xeory Extensionはワンコラムのサイト型テーマです。ユーザーに対して重要なコンテンツを効率的に届けられるようにデザインされています。５種類のカラーバリエーションを用意しています。</p>
     </section>
     <section>
-    <h3>
-        人気のある記事
-    </h3>
-    <ul>
-        <li>
-        <img src="images/0703_01.jpg" alt="写真">
-        <p>カテゴリー#1</p>
-        <p>テスト投稿</p></li>
-        <li><img src="images/0703_01.jpg" alt="写真">
-           <p>カテゴリー#1</p>
-            <p>テスト投稿</p></li>
-        <li><img src="images/0703_01.jpg" alt="写真">
-           <p>カテゴリー#4</p>
-            <p>テスト投稿</p></li>
-        <li><img src="images/0703_01.jpg" alt="写真">
-           <p>カテゴリー#2</p>
-            <p>テスト投稿</p></li>
-        <li><img src="images/0703_01.jpg" alt="写真">
-           <p>カテゴリー#3</p>
-            <p>テスト投稿</p></li>
-    </ul>
+       <h3>人気のある記事</h3>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真">
+              <p>カテゴリー#1</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真">
+              <p>カテゴリー#1</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真">
+              <p>カテゴリー#4</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真">
+              <p>カテゴリー#2</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真">
+              <p>カテゴリー#3</p>
+              <p>テスト投稿</p>
+              </section>
     </section>
     <section>
         <h3>最近の投稿</h3>
-        <ul>
-            <li>
-                <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#1</p>
-                <p>テスト投稿</p></li>
-            <li>
-                <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#1</p>
-                <p>テスト投稿</p></li>
-            <li>
-                <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#4</p>
-                <p>テスト投稿</p></li>
-            <li>
-                <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#2</p>
-                <p>テスト投稿</p></li>
-            <li>
-                <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#3</p>
-                <p>テスト投稿</p></li>
-        </ul>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#1</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#1</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#4</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#2</p>
+              <p>テスト投稿</p>
+              </section>
+              <section>
+              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#3</p>
+              <p>テスト投稿</p>
+              </section>
     </section>
     <section>
         <h2>XeoryExtensionの特徴</h2>
@@ -112,12 +120,8 @@
         <dl>
             <dd>会社名</dd>
             <dt>株式会社ルーシー</dt>
-        </dl>
-        <dl>
             <dd>電話番号</dd>
             <dt>03-1111-2222</dt>
-        </dl>
-        <dl>
             <dd>住所</dd>
             <dt>東京都港区西新橋２-７-４ CJビル11階</dt>
         </dl>
@@ -126,33 +130,33 @@
         <h2>お問い合わせ</h2>
     </section>
     <section>
+       <dl>
         <form action="#" method="post">
-            <p>お名前（必須）</p>
-            <p><input type="text" name="name"></p>
-            <p>メールアドレス（必須）</p>
-            <p><input type="text" name="name"></p>
-            <p>題名（必須）</p>
-            <p><input type="text" name="name"></p>
-            <p>メッセージ入力</p>
+            <dd>お名前(必須)</dd>
+            <dt><input type="text" name="name"></dt>
+            <dd>メールアドレス(必須)</dd>
+            <dt><input type="text" name="name"></dt>
+            <dd>題名必須</dd>
+            <dt><input type="text" name="name"></dt>
+            <dd>メッセージ入力</dd>
             <p><textarea name="comment" cols="30" rows="5"></textarea></p>
         <p><input type="submit" value="送信する"></p>
         </form>
+        </dl>
     </section>
 </main>
 <footer>
-    <h1>XeoryExtension</h1>
-    <p>ブログコンテンツ</p>
-    <ul>
-        <li>記事ページサンプル</li>
-        <li>Extensionをダウンロード</li>
-    </ul>
-    <p>ソーシャルメディア</p>
-    <ul>
-        <li>twiter</li>
-        <li>Facebook</li>
-        <li>google+</li>
-        <li>feedly</li>
-    </ul>
+    <p>XeoryExtension</p>
+    <dl>
+        <dd>ブログコンテンツ</dd>
+        <dt>記事ページサンプル</dt>
+        <dt>Extensionをダウンロード</dt>
+        <dd>ソーシャルメディア</dd>
+        <dt>twiter</dt>
+        <dt>Facebook</dt>
+        <dt>google+</dt>
+        <dt>feedly</dt>
+        </dl>
     <p>&#169;Copyright 2020 XeoryExtension. All rights reserved.</p>
 </footer>
 
