修正しました

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </nav>
 </header>
 <main>
+  <article>
    <section>
     <h2>XeoryExtension</h2>
     <p>Xeory Extensionはワンコラムのサイト型テーマです。ユーザーに対して重要なコンテンツを効率的に届けられるようにデザインされています。５種類のカラーバリエーションを用意しています。</p>
@@ -24,79 +25,84 @@
     <section>
        <h3>人気のある記事</h3>
               <section>
-              <img src="images/0703_01.jpg" alt="写真">
+              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+              <h4>テスト投稿</h4>
               <p>カテゴリー#1</p>
-              <p>テスト投稿</p>
               </section>
               <section>
-              <img src="images/0703_01.jpg" alt="写真">
+              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+              <h4>テスト投稿</h4>
               <p>カテゴリー#1</p>
-              <p>テスト投稿</p>
               </section>
               <section>
-              <img src="images/0703_01.jpg" alt="写真">
+              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+              <h4>テスト投稿</h4>
               <p>カテゴリー#4</p>
-              <p>テスト投稿</p>
               </section>
               <section>
-              <img src="images/0703_01.jpg" alt="写真">
+              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+              <h4>テスト投稿</h4>
               <p>カテゴリー#2</p>
-              <p>テスト投稿</p>
               </section>
               <section>
-              <img src="images/0703_01.jpg" alt="写真">
+              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+              <h4>テスト投稿</h4>
               <p>カテゴリー#3</p>
-              <p>テスト投稿</p>
               </section>
     </section>
     <section>
         <h3>最近の投稿</h3>
-              <section>
-              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#1</p>
-              <p>テスト投稿</p>
-              </section>
-              <section>
-              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#1</p>
-              <p>テスト投稿</p>
-              </section>
-              <section>
-              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#4</p>
-              <p>テスト投稿</p>
-              </section>
-              <section>
-              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#2</p>
-              <p>テスト投稿</p>
-              </section>
-              <section>
-              <img src="images/0703_01.jpg" alt="写真"><p>カテゴリー#3</p>
-              <p>テスト投稿</p>
-              </section>
+            <section>
+            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+            <h4>テスト投稿</h4>
+            <p>カテゴリー#1</p>
+            </section>
+            <section>
+            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+            <h4>テスト投稿</h4>
+            <p>カテゴリー#1</p>
+            </section>
+            <section>
+            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+            <h4>テスト投稿</h4>
+            <p>カテゴリー#4</p>
+            </section>
+            <section>
+            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+            <h4>テスト投稿</h4>
+            <p>カテゴリー#2</p>
+            </section>
+            <section>
+            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+            <h4>テスト投稿</h4>
+            <p>カテゴリー#3</p>
+            </section>
     </section>
     <section>
         <h2>XeoryExtensionの特徴</h2>
             <section><h3>モバイルレスポンシブ</h3>
-                <img src="images/0703_01.jpg" alt="写真">
+                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
             <p> mobile　responsive</p>
                 <p>Xeory Extensionはレスポンシブデザインを採用しています。スマートフォンやタブレットなど各種デバイスで表示が最適化されます。</p>
                 <p><a href="">詳しく見る</a></p>
             </section>
             <section>
                 <h3>HTML5デザイン</h3>
-                <img src="images/0703_01.jpg" alt="写真">
+                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
                 <p>HTML5 Design</p>
                 <p>Xeory Extensionは最新のHTML5言語でデザイン及びコーディングがなされています。時代遅れのソースからは卒業しましょう。</p>
                 <p><a href="">詳しく見る</a></p>
             </section>
             <section>
                 <h3>SEO最適化</h3>
-                <img src="images/0703_01.jpg" alt="写真">
+                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
                 <p>Search Engine Optimized</p>
                 <p>Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
                 <p><a href="">詳しく見る</a></p>
             </section>
             <section>
                 <h3>高いカスタマイズ性</h3>
-                <img src="images/0703_01.jpg" alt="写真">
+                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
                 <p>Customizable</p>
                 <p>Xeory Extensionはカスタマイズフリーです。CSS, HTML, PHP の知識があれば自由にカスタマイズすることができます。</p>
                 <p><a href="">詳しく見る</a></p>
@@ -107,7 +113,7 @@
             <section>
                 <h3>Xeoryカスタマイズ</h3>
                 <p>Xeory Customize</p>
-                <a href="">カスタマイズ事例を見る</a>
+                <p><a href="">カスタマイズ事例を見る</a></p>
             </section>
             <section>
                 <h3>コンサルティング</h3>
@@ -128,22 +134,23 @@
     </section>
     <section>
         <h2>お問い合わせ</h2>
-    </section>
     <section>
-       <dl>
         <form action="#" method="post">
-            <dd>お名前(必須)</dd>
-            <dt><input type="text" name="name"></dt>
-            <dd>メールアドレス(必須)</dd>
-            <dt><input type="text" name="name"></dt>
-            <dd>題名必須</dd>
-            <dt><input type="text" name="name"></dt>
-            <dd>メッセージ入力</dd>
+           <dl>
+            <dt>お名前(必須)</dt>
+            <dd><input type="text" name="name"></dd>
+            <dt>メールアドレス(必須)</dt>
+            <dd><input type="text" name="name"></dd>
+            <dt>題名必須</dt>
+            <dd><input type="text" name="name"></dd>
+            <dt>メッセージ入力</dt>
             <p><textarea name="comment" cols="30" rows="5"></textarea></p>
         <p><input type="submit" value="送信する"></p>
-        </form>
         </dl>
+        </form>
+        </section>
     </section>
+    </article>
 </main>
 <footer>
     <p>XeoryExtension</p>
