修正しました

--- a/index.html
+++ b/index.html
@@ -1,173 +1,150 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>XeoryExtension</title>
-	<meta name="Author" content=""/>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<header>
-    <h1>XeoryExtension</h1>
-    <nav>
-        <ul>
-            <li><a href="">記事のページサンプル</a></li>
-            <li><a href="">Extensionをダウンロード</a></li>
-        </ul>
-    </nav>
-</header>
-<main>
-  <article>
-   <section>
-    <h2>XeoryExtension</h2>
-    <p>Xeory Extensionはワンコラムのサイト型テーマです。ユーザーに対して重要なコンテンツを効率的に届けられるようにデザインされています。５種類のカラーバリエーションを用意しています。</p>
-    </section>
-    <section>
-       <h3>人気のある記事</h3>
-              <section>
-              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-              <h4>テスト投稿</h4>
-              <p>カテゴリー#1</p>
-              </section>
-              <section>
-              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-              <h4>テスト投稿</h4>
-              <p>カテゴリー#1</p>
-              </section>
-              <section>
-              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-              <h4>テスト投稿</h4>
-              <p>カテゴリー#4</p>
-              </section>
-              <section>
-              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-              <h4>テスト投稿</h4>
-              <p>カテゴリー#2</p>
-              </section>
-              <section>
-              <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-              <h4>テスト投稿</h4>
-              <p>カテゴリー#3</p>
-              </section>
-    </section>
-    <section>
-        <h3>最近の投稿</h3>
-            <section>
-            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-            <h4>テスト投稿</h4>
-            <p>カテゴリー#1</p>
-            </section>
-            <section>
-            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-            <h4>テスト投稿</h4>
-            <p>カテゴリー#1</p>
-            </section>
-            <section>
-            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-            <h4>テスト投稿</h4>
-            <p>カテゴリー#4</p>
-            </section>
-            <section>
-            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-            <h4>テスト投稿</h4>
-            <p>カテゴリー#2</p>
-            </section>
-            <section>
-            <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-            <h4>テスト投稿</h4>
-            <p>カテゴリー#3</p>
-            </section>
-    </section>
-    <section>
-        <h2>XeoryExtensionの特徴</h2>
-            <section><h3>モバイルレスポンシブ</h3>
-                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-            <p> mobile　responsive</p>
-                <p>Xeory Extensionはレスポンシブデザインを採用しています。スマートフォンやタブレットなど各種デバイスで表示が最適化されます。</p>
-                <p><a href="">詳しく見る</a></p>
-            </section>
-            <section>
-                <h3>HTML5デザイン</h3>
-                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-                <p>HTML5 Design</p>
-                <p>Xeory Extensionは最新のHTML5言語でデザイン及びコーディングがなされています。時代遅れのソースからは卒業しましょう。</p>
-                <p><a href="">詳しく見る</a></p>
-            </section>
-            <section>
-                <h3>SEO最適化</h3>
-                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-                <p>Search Engine Optimized</p>
-                <p>Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
-                <p><a href="">詳しく見る</a></p>
-            </section>
-            <section>
-                <h3>高いカスタマイズ性</h3>
-                <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-                <p>Customizable</p>
-                <p>Xeory Extensionはカスタマイズフリーです。CSS, HTML, PHP の知識があれば自由にカスタマイズすることができます。</p>
-                <p><a href="">詳しく見る</a></p>
-            </section>
-    </section>
-    <section>
-        <h2>サービス紹介</h2>
-            <section>
-                <h3>Xeoryカスタマイズ</h3>
-                <p>Xeory Customize</p>
-                <p><a href="">カスタマイズ事例を見る</a></p>
-            </section>
-            <section>
-                <h3>コンサルティング</h3>
-                <p>Consulting</p>
-                <a href="">コンサルティング事例を見る</a>
-            </section>
-    </section>
-    <section>
-        <h2>会社紹介</h2>
-        <dl>
-            <dd>会社名</dd>
-            <dt>株式会社ルーシー</dt>
-            <dd>電話番号</dd>
-            <dt>03-1111-2222</dt>
-            <dd>住所</dd>
-            <dt>東京都港区西新橋２-７-４ CJビル11階</dt>
-        </dl>
-    </section>
-    <section>
-        <h2>お問い合わせ</h2>
-    <section>
-        <form action="#" method="post">
-           <dl>
-            <dt>お名前(必須)</dt>
-            <dd><input type="text" name="name"></dd>
-            <dt>メールアドレス(必須)</dt>
-            <dd><input type="text" name="name"></dd>
-            <dt>題名必須</dt>
-            <dd><input type="text" name="name"></dd>
-            <dt>メッセージ入力</dt>
-            <p><textarea name="comment" cols="30" rows="5"></textarea></p>
-        <p><input type="submit" value="送信する"></p>
-        </dl>
-        </form>
-        </section>
-    </section>
-    </article>
-</main>
-<footer>
-    <p>XeoryExtension</p>
-    <dl>
-        <dd>ブログコンテンツ</dd>
-        <dt>記事ページサンプル</dt>
-        <dt>Extensionをダウンロード</dt>
-        <dd>ソーシャルメディア</dd>
-        <dt>twiter</dt>
-        <dt>Facebook</dt>
-        <dt>google+</dt>
-        <dt>feedly</dt>
-        </dl>
-    <p>&#169;Copyright 2020 XeoryExtension. All rights reserved.</p>
-</footer>
-
-
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>XeoryExtension</title>
+        <meta name="Author" content="" />
+        <link rel="stylesheet" type="text/css" href="style.css"> </head>
+    <body>
+        <header>
+            <h1>XeoryExtension</h1>
+            <nav>
+                <ul>
+                    <li><a href="">記事のページサンプル</a></li>
+                    <li><a href="">Extensionをダウンロード</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <article>
+                <h2>XeoryExtension</h2>
+                <p>Xeory Extensionはワンコラムのサイト型テーマです。ユーザーに対して重要なコンテンツを効率的に届けられるようにデザインされています。５種類のカラーバリエーションを用意しています。</p>
+                <section>
+                    <h3>人気のある記事</h3>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#1</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#1</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#4</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#2</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#3</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                </section>
+                <section>
+                    <h3>最近の投稿</h3>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#1</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#1</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#4</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#2</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section>
+                        <h4>テスト投稿</h4>
+                        <p>カテゴリー#3</p>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                </section>
+                <section>
+                    <h3>XeoryExtensionの特徴</h3>
+                    <section>
+                        <h3>モバイルレスポンシブ</h3>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                        <p> mobile　responsive</p>
+                        <p>Xeory Extensionはレスポンシブデザインを採用しています。スマートフォンやタブレットなど各種デバイスで表示が最適化されます。</p>
+                        <p><a href="">詳しく見る</a></p>
+                    </section>
+                    <section>
+                        <h3>HTML5デザイン</h3>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                        <p>HTML5 Design</p>
+                        <p>Xeory Extensionは最新のHTML5言語でデザイン及びコーディングがなされています。時代遅れのソースからは卒業しましょう。</p>
+                        <p><a href="">詳しく見る</a></p>
+                    </section>
+                    <section>
+                        <h3>SEO最適化</h3>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                        <p>Search Engine Optimized</p>
+                        <p>Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
+                        <p><a href="">詳しく見る</a></p>
+                    </section>
+                    <section>
+                        <h3>高いカスタマイズ性</h3>
+                        <figure><img src="images/0703_01.jpg" alt="写真"></figure>
+                        <p>Customizable</p>
+                        <p>Xeory Extensionはカスタマイズフリーです。CSS, HTML, PHP の知識があれば自由にカスタマイズすることができます。</p>
+                        <p><a href="">詳しく見る</a></p>
+                    </section>
+                </section>
+                <section>
+                    <h2>サービス紹介</h2>
+                    <section>
+                        <h3>Xeoryカスタマイズ</h3>
+                        <p>Xeory Customize</p>
+                        <p><a href="">カスタマイズ事例を見る</a></p>
+                    </section>
+                    <section>
+                        <h3>コンサルティング</h3>
+                        <p>Consulting</p> <a href="">コンサルティング事例を見る</a> </section>
+                </section>
+                <section>
+                    <h2>会社紹介</h2>
+                    <dl>
+                        <dd>会社名</dd> <dt>株式会社ルーシー</dt>
+                        <dd>電話番号</dd> <dt>03-1111-2222</dt>
+                        <dd>住所</dd> <dt>東京都港区西新橋２-７-４ CJビル11階</dt> </dl>
+                </section>
+                <section>
+                    <h2>お問い合わせ</h2>
+                    <section>
+                        <form action="#" method="post">
+                            <dl> <dt>お名前(必須)</dt>
+                                <dd><input type="text" name="name"></dd> <dt>メールアドレス(必須)</dt>
+                                <dd><input type="text" name="name"></dd> <dt>題名必須</dt>
+                                <dd><input type="text" name="name"></dd> <dt>メッセージ入力</dt> </dl>
+                            <p><textarea name="comment" cols="30" rows="5"></textarea></p>
+                            <p><input type="submit" value="送信する"></p>
+                        </form>
+                    </section>
+                </section>
+            </article>
+        </main>
+        <footer>
+            <p>XeoryExtension</p>
+            <dl>
+                <dd>ブログコンテンツ</dd> <dt>記事ページサンプル</dt> <dt>Extensionをダウンロード</dt>
+                <dd>ソーシャルメディア</dd> <dt>twiter</dt> <dt>Facebook</dt> <dt>google+</dt> <dt>feedly</dt> </dl>
+            <p>&#169;Copyright 2020 XeoryExtension. All rights reserved.</p>
+        </footer>
+    </body>
 </html>
