--- a/index.html
+++ b/index.html
@@ -76,62 +76,58 @@
                     </section>
                 </section>
                 <section>
-                    <h3>XeoryExtensionの特徴</h3>
+                    <h3>XeoryExtensionの特徴<span>feature</span></h3>
                     <section>
-                        <h3>モバイルレスポンシブ</h3>
+                        <h4>モバイルレスポンシブ<sapn> mobile responsive</sapn></h4>
                         <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p> mobile　responsive</p>
                         <p>Xeory Extensionはレスポンシブデザインを採用しています。スマートフォンやタブレットなど各種デバイスで表示が最適化されます。</p>
                         <p><a href="">詳しく見る</a></p>
                     </section>
                     <section>
-                        <h3>HTML5デザイン</h3>
+                        <h4>HTML5デザイン<span>HTML5 Design</span></h4>
                         <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p>HTML5 Design</p>
                         <p>Xeory Extensionは最新のHTML5言語でデザイン及びコーディングがなされています。時代遅れのソースからは卒業しましょう。</p>
                         <p><a href="">詳しく見る</a></p>
                     </section>
                     <section>
-                        <h3>SEO最適化</h3>
+                        <h4>SEO最適化<span>Search Engine Optimized</span></h4>
                         <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p>Search Engine Optimized</p>
                         <p>Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
                         <p><a href="">詳しく見る</a></p>
                     </section>
                     <section>
-                        <h3>高いカスタマイズ性</h3>
+                        <h4>高いカスタマイズ性<span>Customizable</span></h4>
                         <figure><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p>Customizable</p>
                         <p>Xeory Extensionはカスタマイズフリーです。CSS, HTML, PHP の知識があれば自由にカスタマイズすることができます。</p>
                         <p><a href="">詳しく見る</a></p>
                     </section>
                 </section>
                 <section>
-                    <h2>サービス紹介</h2>
+                    <h3>サービス紹介<span>service</span></h3>
                     <section>
-                        <h3>Xeoryカスタマイズ</h3>
-                        <p>Xeory Customize</p>
+                        <h4>Xeoryカスタマイズ<span>Xeory Customize</span></h4>
                         <p><a href="">カスタマイズ事例を見る</a></p>
                     </section>
                     <section>
-                        <h3>コンサルティング</h3>
-                        <p>Consulting</p> <a href="">コンサルティング事例を見る</a> </section>
+                        <h4>コンサルティング<span>Consulting</span></h4>
+                        <a href="">コンサルティング事例を見る</a> </section>
                 </section>
                 <section>
-                    <h2>会社紹介</h2>
+                    <h2>会社紹介<span>company</span></h2>
                     <dl>
                         <dd>会社名</dd> <dt>株式会社ルーシー</dt>
                         <dd>電話番号</dd> <dt>03-1111-2222</dt>
                         <dd>住所</dd> <dt>東京都港区西新橋２-７-４ CJビル11階</dt> </dl>
                 </section>
                 <section>
-                    <h2>お問い合わせ</h2>
+                    <h2>お問い合わせ<span>inquiry</span></h2>
                     <section>
                         <form action="#" method="post">
-                            <dl> <dt>お名前(必須)</dt>
+                            <dl> <dd><input type="text" name="name"></dd> <dt>お名前(必須)</dt> 
                                 <dd><input type="text" name="name"></dd> <dt>メールアドレス(必須)</dt>
                                 <dd><input type="text" name="name"></dd> <dt>題名必須</dt>
-                                <dd><input type="text" name="name"></dd> <dt>メッセージ入力</dt> </dl>
+                                <dd><input type="text" name="name"></dd> <dt>メッセージ入力</dt>
+                            </dl>
                             <p><textarea name="comment" cols="30" rows="5"></textarea></p>
                             <p><input type="submit" value="送信する"></p>
                         </form>
@@ -142,8 +138,9 @@
         <footer>
             <p>XeoryExtension</p>
             <dl>
-                <dd>ブログコンテンツ</dd> <dt>記事ページサンプル</dt> <dt>Extensionをダウンロード</dt>
-                <dd>ソーシャルメディア</dd> <dt>twiter</dt> <dt>Facebook</dt> <dt>google+</dt> <dt>feedly</dt> </dl>
+                <dd>ブログコンテンツ</dd> <dt><a href="">記事ページサンプル</a></dt> <dt><a href="">Extensionをダウンロード</a></dt> </dl>
+            <dl>
+                <dd>ソーシャルメディア</dd> <dt><a href="">twiter</a></dt> <dt><a href="">Facebook</a></dt> <dt><a href="">google+</a></dt> <dt><a href="">feedly</a></dt> </dl>
             <p>&#169;Copyright 2020 XeoryExtension. All rights reserved.</p>
         </footer>
     </body>
