dd dtの修正、あとどっかのpタグの追加しました

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>XeoryExtension</title>
         <meta name="Author" content="" />
-        <link rel="stylesheet" type="text/css" href="style.css"> </head>
+        <link rel="stylesheet" type="text/css" href="style.css"> 
+    </head>
     <body>
         <header>
             <h1>XeoryExtension</h1>
@@ -110,7 +111,7 @@
                     </section>
                     <section>
                         <h4>コンサルティング<span>Consulting</span></h4>
-                        <a href="">コンサルティング事例を見る</a> </section>
+                        <p>><a href="">コンサルティング事例を見る</a></p> </section>
                 </section>
                 <section>
                     <h2>会社紹介<span>company</span></h2>
@@ -123,10 +124,11 @@
                     <h2>お問い合わせ<span>inquiry</span></h2>
                     <section>
                         <form action="#" method="post">
-                            <dl> <dd><input type="text" name="name"></dd> <dt>お名前(必須)</dt> 
-                                <dd><input type="text" name="name"></dd> <dt>メールアドレス(必須)</dt>
-                                <dd><input type="text" name="name"></dd> <dt>題名必須</dt>
-                                <dd><input type="text" name="name"></dd> <dt>メッセージ入力</dt>
+                            <dl>
+                                <dt>お名前(必須)</dt><dd><input type="text" name="name"></dd> 
+                                <dt>メールアドレス(必須)</dt><dd><input type="text" name="name"></dd> 
+                                <dt>題名必須</dt><dd><input type="text" name="name"></dd>
+                                <dt>メッセージ入力</dt><dd><input type="text" name="name"></dd>
                             </dl>
                             <p><textarea name="comment" cols="30" rows="5"></textarea></p>
                             <p><input type="submit" value="送信する"></p>
