--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </section>
                     <section>
                         <h4>コンサルティング<span>Consulting</span></h4>
-                        <p>><a href="">コンサルティング事例を見る</a></p> </section>
+                        <p><a href="">コンサルティング事例を見る</a></p> </section>
                 </section>
                 <section>
                     <h2>会社紹介<span>company</span></h2>
