--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <h4 class="content-title">コンサルティング<span>Consulting</span></h4>
                         <p class="btn green"><a href="">コンサルティング事例を見る</a></p> </section>
                 </section>
-                <section class=company>
+                <section class="company">
                     <h2 class="content-title">会社紹介<span>company</span></h2>
                     <dl class=company-item>
                         <dd>会社名</dd> <dt>株式会社ルーシー</dt>
