--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
             <h1 class="title">XeoryExtension</h1>
             <nav class="gnav">
                 <ul class="gnav-item">
-                    <li><a href="">記事のページサンプル</a></li>
-                    <li><a href="">Extensionをダウンロード</a></li>
+                    <li><a href="">記事のページサンプル</a></li><li><a href="">Extensionをダウンロード</a></li>
                 </ul>
             </nav>
         </header>
