インデントを揃えて、classの修正をしました

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>XeoryExtension</title>
-        <meta name="Author" content=""/>
+        <meta name="Author" content="" />
         <link rel="stylesheet" href="css/common.css">
     </head>
     <body>
@@ -11,7 +11,8 @@
             <h1 class="title">XeoryExtension</h1>
             <nav class="gnav">
                 <ul class="gnav-item">
-                    <li><a href="">記事のページサンプル</a></li><li><a href="">Extensionをダウンロード</a></li>
+                    <li><a href="">記事のページサンプル</a></li>
+                    <li><a href="">Extensionをダウンロード</a></li>
                 </ul>
             </nav>
         </header>
@@ -120,13 +121,11 @@
                 </section>
                 <section class="cotent">
                     <h2 class="table-title">会社紹介<span>company</span></h2>
-                    <dl class=table-item>
-                        <dt class="table-title">会社名</dt>
-                        <dd class="table-description">株式会社ルーシー</dd>
-                        <dt class="table-title">電話番号</dt>
-                        <dd class="table-descrption">03-1111-2222</dd>
-                        <dt class="table-title">住所</dt>
-                        <dd class="table-discription">東京都港区西新橋２-７-４ CJビル11階</dd> </dl>
+                    <dl class=table-item> <dt class="table-title">会社名</dt>
+                        <dd class="table-description">株式会社ルーシー</dd> <dt class="table-title">電話番号</dt>
+                        <dd class="table-descrption">03-1111-2222</dd> <dt class="table-title">住所</dt>
+                        <dd class="table-discription">東京都港区西新橋２-７-４ CJビル11階</dd>
+                    </dl>
                 </section>
                 <section class="inquiry">
                     <h2 class="inquiry-title">お問い合わせ<span>inquiry</span></h2>
@@ -146,13 +145,11 @@
         </main>
         <footer class="footer">
             <p class="footer-title">XeoryExtension</p>
-            <dl class="footer-content">
-                <dt class="footer-label">ブログコンテンツ</dt>
+            <dl class="footer-content"> <dt class="footer-label">ブログコンテンツ</dt>
                 <dd class=footr-value><a href="">記事ページサンプル</a></dd>
                 <dd class="footer-value"><a href="">Extensionをダウンロード</a></dd>
             </dl>
-            <dl class="footer-content">
-                <dt class="footer-label">ソーシャルメディア</dt>
+            <dl class="footer-content"> <dt class="footer-label">ソーシャルメディア</dt>
                 <dd class="footer-value"><a href="">twiter</a></dd>
                 <dd class="footer-value"><a href="">Facebook</a></dd>
                 <dd class="footer-value"><a href="">google+</a></dd>
