XeoryExtensionの特徴　のところの画像が交互になったはいいのですが、説明文が食い込むのと、ボタンの文字色の固定、hoverの設定がうまくきません。

--- a/index.html
+++ b/index.html
@@ -85,29 +85,28 @@
                     <h3 class="content-title">XeoryExtensionの特徴<span class="sub"> feature</span></h3>
                     <section class="feature">
                         <h4 class="feature-title">モバイルレスポンシブ<sapn class="feature-sub">mobile responsive</sapn></h4>
-                        <p class="feature-description">Xeory Extensionはレスポンシブデザインを採用しています。スマートフォンやタブレットなど各種デバイスで表示が最適化されます。</p>
-                        <p class="btn orange"><a href="">詳しく見る</a></p>
-                        <figure class="feature-image"><img src="images/0703_01.jpg" alt="写真"></figure>
+                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
+                        <p class="feature-item">Xeory Extensionはレスポンシブデザインを採用しています。スマートフォンやタブレットなど各種デバイスで表示が最適化されます。</p>
+                        <p class="btn-orange"><a href="#">詳しく見る</a></p>
                     </section>
-                    <section class="featuere">
+                    <section class="feature">
                         <h4 class="feature-title">HTML5デザイン<span class="feature-sub">HTML5 Design</span></h4>
-                        <figure class=featuere-image><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p class="feature-description">Xeory Extensionは最新のHTML5言語でデザイン及びコーディングがなされています。時代遅れのソースからは卒業しましょう。</p>
-                        <p class="btn orange"><a href="">詳しく見る</a></p>
-                    </section>
-                    <section class="featuere">
-                            <h4 class="featuere-title">SEO最適化<span class="feature-sub">Search Engine Optimized</span></h4>
                         <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p class="feature-description">Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
-                        <p clss="btn orange"><a href="">詳しく見る</a></p>
+                        <p class="feature-item">Xeory Extensionは最新のHTML5言語でデザイン及びコーディングがなされています。時代遅れのソースからは卒業しましょう。</p>
+                        <p class="btn-orange"><a href="">詳しく見る</a></p>
                     </section>
-                    <section class="featuere">
-                        <div class="responsive-description">
-                            <h4 class="featuere-title">高いカスタマイズ性<span clas="feature-sub">Customizable</span></h4>
+                    <section class="feature">
+                        <h4 class="feature-title">SEO最適化<span class="feature-sub">Search Engine Optimized</span></h4>
                         <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p class="feature-description">Xeory Extensionはカスタマイズフリーです。CSS, HTML, PHP の知識があれば自由にカスタマイズすることができます。</p>
-                        <p class="btn orange"><a href="">詳しく見る</a></p>
-                        </div>
+                        <p class="feature-item">Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
+                        <p clss="btn-orange"><a href="">詳しく見る</a></p>
+                    </section>
+                    <section class="feature">
+                        <h4 class="feature-title">高いカスタマイズ性<span class="feature-sub">Customizable
+                            </span></h4>
+                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
+                        <p class="feature-item">Xeory Extensionはカスタマイズフリーです。CSS, HTML, PHP の知識があれば自由にカスタマイズすることができます。</p>
+                        <p class="btn-orange"><a href="">詳しく見る</a></p>
                     </section>
                 </section>
                 <section class="content">
