交互に画像表示するところが、padding-rightがうまいことかからないです

--- a/index.html
+++ b/index.html
@@ -84,43 +84,53 @@
                 <section class="content">
                     <h3 class="content-title">XeoryExtensionの特徴<span class="sub"> feature</span></h3>
                     <section class="feature">
+                       <div class="feature-group">
                         <h4 class="feature-title">モバイルレスポンシブ<sapn class="feature-sub">mobile responsive</sapn></h4>
-                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
                         <p class="feature-item">Xeory Extensionはレスポンシブデザインを採用しています。スマートフォンやタブレットなど各種デバイスで表示が最適化されます。</p>
                         <p class="btn-orange"><a href="#">詳しく見る</a></p>
+                        </div>
+                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
                     </section>
                     <section class="feature">
+                        <div class="feature-group">
                         <h4 class="feature-title">HTML5デザイン<span class="feature-sub">HTML5 Design</span></h4>
-                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
                         <p class="feature-item">Xeory Extensionは最新のHTML5言語でデザイン及びコーディングがなされています。時代遅れのソースからは卒業しましょう。</p>
-                        <p class="btn-orange"><a href="">詳しく見る</a></p>
-                    </section>
-                    <section class="feature">
-                        <h4 class="feature-title">SEO最適化<span class="feature-sub">Search Engine Optimized</span></h4>
+                        <p class="btn-orange"><a href="#">詳しく見る</a></p>
+                        </div>
                         <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
-                        <p class="feature-item">Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
-                        <p clss="btn-orange"><a href="">詳しく見る</a></p>
                     </section>
                     <section class="feature">
+                        <div class="feature-group">
+                        <h4 class="feature-title">SEO最適化<span class="feature-sub">Search Engine Optimized</span></h4>
+                        <p class="feature-item">Xeory ExtensionはGoogleのSEOガイドラインに可能な限り沿った構造になっています。必要なのは良質なコンテンツだけです。</p>
+                        <p class="btn-orange"><a href="#">詳しく見る</a></p>
+                        </div>
+                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
+                    </section>
+                    <section class="feature">
+                        <div class="feature-group">
                         <h4 class="feature-title">高いカスタマイズ性<span class="feature-sub">Customizable
                             </span></h4>
-                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
                         <p class="feature-item">Xeory Extensionはカスタマイズフリーです。CSS, HTML, PHP の知識があれば自由にカスタマイズすることができます。</p>
-                        <p class="btn-orange"><a href="">詳しく見る</a></p>
+                        <p class="btn-orange"><a href="#">詳しく見る</a></p>
+                        </div>
+                        <figure class="featuere-image"><img src="images/0703_01.jpg" alt="写真"></figure>
                     </section>
                 </section>
                 <section class="content">
                     <h3 class="content-title">サービス紹介<span class="sub">service</span></h3>
-                    <section class="custmoize">
-                        <h4 class=contenst-title>Xeoryカスタマイズ<span>xeory Customize</span></h4>
-                        <p class="btn green"><a href="">カスタマイズ事例を見る</a></p>
+                        <section class="service-item">
+                       <section class="custmoize">
+                           <h4 class=contents-title>Xeoryカスタマイズ<span class="feature-sub">xeory Customize</span></h4>
+                        <p class="btn-green"><a href="#">カスタマイズ事例を見る</a></p>
                     </section>
-                    <section class="consulting">
-                        <h4 class="contents-title">コンサルティング<span class="sub">consulting</span></h4>
-                        <p class="btn green"><a href="">コンサルティング事例を見る</a></p>
+                    <section class="Consulting">
+                        <h4 class="contents-title">コンサルティング<span class="feature-sub">consulting</span></h4>
+                        <p class="btn-green"><a href="#">コンサルティング事例を見る</a></p>
+                    </section>
                     </section>
                 </section>
-                <section class="cotent">
+                <section class="content">
                     <h2 class="content-title">会社紹介<span>company</span></h2>
                     <dl class=table-item> <dt class="table-title">会社名</dt>
                         <dd class="table-description">株式会社ルーシー</dd> <dt class="table-title">電話番号</dt>
