--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <meta charset="UTF-8">
         <title>XeoryExtension</title>
         <meta name="Author" content="" />
-        <link rel="stylesheet" href="css/common.css"> </head>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="css/common.css">
+        <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    </head>
     <body>
         <header id="header">
             <h1 class="title"><a href="#">XeoryExtension</a></h1>
+            <p class="gnav-cntrol"><i class="fas fa-align-justify"></i></p>
             <nav class="gnav">
                 <ul class="gnav-item">
                     <li class="gnav-list"><a href="#">記事のページサンプル</a></li>
@@ -168,7 +172,7 @@
             <div class="footer-list">
             <dl class="footer-content">
                 <dt class="footer-label">ブログコンテンツ</dt>
-                <dd class="footer-value><a href="">記事ページサンプル</a></dd>
+                <dd class=footer-value><a href="">記事ページサンプル</a></dd>
                 <dd class="footer-value"><a href="">Extensionをダウンロード</a></dd>
             </dl>
             <dl class="footer-content"> <dt class="footer-label">ソーシャルメディア</dt>
